# BankManagement_cpp

./: CMakeLists.txt  README.md
lib_h/: Admin.h  Customer.h  FilesReader.h  Input.h  Make_database.h  Path.h  Permmission.h  User.h  database_isExit.h  header.h  make_newAccount.h
src/: Admin.cpp  Customer.cpp  FilesReader.cpp  Input.cpp  User.cpp  main.cpp  make_newAccount.cpp
